# advent-of-code

./: .gitignore  Cargo.toml  LICENSE  README.md  add_day.sh
.github/workflows/: codspeed.yml
benches/: aoc_bench.rs
input_files/: y23q10q1.txt  y23q10q1_test.txt  y23q10q2_test.txt  y23q11q1_test.txt  y23q11q2_test.txt  y23q12q1.txt  y23q12q1_test.txt  y23q12q2_test.txt  y23q13q1_test.txt  y23q13q2.txt  y23q13q2_test.txt  y23q14q1_test.txt  y23q14q2.txt  y23q14q2_test.txt  y23q15q1_test.txt  y23q15q2_test.txt  y23q16q1.txt  y23q16q1_test.txt  y23q16q2_test.txt  y23q17q1.txt  y23q17q1_test.txt  y23q17q2_test.txt  y23q18q1_test.txt  y23q18q2_test.txt  y23q19q1_test.txt  y23q19q2_test.txt  y23q1q1_test.txt  y23q1q2_test.txt  y23q2q1_test.txt  y23q2q2_test.txt  y23q3q1_test.txt  y23q3q2_test.txt  y23q4q1_test.txt  y23q4q2_test.txt  y23q5q1.txt  y23q5q1_test.txt  y23q5q2_test.txt  y23q6q1.txt  y23q6q1_test.txt  y23q6q2_test.txt  (+16 more)
src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  main.rs  template.rs  utils.rs
src/y23/: mod.rs  y23q1.rs  y23q10.rs  y23q11.rs  y23q12.rs  y23q13.rs  y23q14.rs  y23q15.rs  y23q16.rs  y23q17.rs  y23q18.rs  y23q19.rs  y23q2.rs  y23q20.rs  y23q21.rs  y23q22.rs  y23q23.rs  y23q24.rs  y23q25.rs  y23q3.rs  y23q4.rs  y23q5.rs  y23q6.rs  y23q7.rs  y23q8.rs  y23q9.rs
src/y24/: mod.rs  y24q1.rs
