[package]
name = "advent"
version = "0.3.0"
authors = ["plesak"]
edition = "2021"

[dependencies]
num = "0.4.3"
itertools = "0.13.0"
ndarray = "0.16.1"
regex = "1.11.1"
clap = { version = "4.5.21", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
codspeed = "2.7.2"
codspeed-criterion-compat = "2.7.2"

[lib]
name = "advent_of_code"
path = "src/lib.rs"

[[bench]]
name = "aoc_bench"
harness = false
